--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
 
     <section class="hero" id="home">
         <div class="hero-content">
-            <h1>John Doe</h1>
-            <p>Développeur Web Full Stack</p>
+            <h1>YATABARE Cheikna Amala</h1>
+            <p>Data Scientist</p>
             <img src="profil.jpg" alt="Photo de profil" style="width: 200px; border-radius: 50%; margin: 1rem auto;">
         </div>
     </section>
