--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
         .project-info {
             padding: 1.5rem;
         }
+        
 
         /* Skills Section */
         .skills {
@@ -203,13 +204,16 @@
         <h2 style="text-align: center; margin-bottom: 3rem;">Mes Projets</h2>
         <div class="projects-grid">
             <!-- Projet 1 -->
-            <div class="project-card">
-                <img src="project1.jpg" alt="Projet 1" class="project-image">
-                <div class="project-info">
-                    <h3>Application Web</h3>
-                    <p>Description du projet...</p>
-                </div>
+    <a href="https://github.com/YATABARE-Cheikna-Amala/QUARTO-Expose-du-cours-de-projet-statistique-sous-R" class="project-card" target="_blank" rel="noopener noreferrer">
+        <img src="Quarto.jpeg" alt="Projet 1" class="project-image">
+        <div class="project-info">
+            <h3>Formation complète sur Quarto</h3>
+            <p>Mise en place d'un cours complet sur la création de documents et de sites webs avec Quarto</p>
+            <div class="github-link">
+                <i class="fab fa-github"></i> Voir sur GitHub
             </div>
+        </div>
+    </a>
             <!-- Ajouter plus de projets ici -->
         </div>
     </section>
