--- a/index.html
+++ b/index.html
@@ -214,6 +214,17 @@
             </div>
         </div>
     </a>
+             <!-- Projet 2 -->
+    <a href="https://github.com/YATABARE-Cheikna-Amala/projet_machine_learning_student_performance" target="_blank" rel="noopener noreferrer">
+        <img src="Quarto.jpeg" alt="Projet 1" class="project-image">
+        <div class="project-info">
+            <h3>Machine Learning/h3>
+            <p>Projet de Machine Learning Sur la prédiction des performances des étudiants</p>
+            <div class="github-link">
+                <i class="fab fa-github"></i> Voir sur GitHub
+            </div>
+        </div>
+    </a>
             <!-- Ajouter plus de projets ici -->
         </div>
     </section>
