--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <div class="projects-grid">
             <!-- Projet 1 -->
     <a href="https://github.com/YATABARE-Cheikna-Amala/QUARTO-Expose-du-cours-de-projet-statistique-sous-R" class="project-card" target="_blank" rel="noopener noreferrer">
-        <img src="Quarto.jpeg" alt="Projet 1" class="project-image">
+        <img src="" alt="Projet 1" class="project-image">
         <div class="project-info">
             <h3>Formation complète sur Quarto</h3>
             <p>Mise en place d'un cours complet sur la création de documents et de sites webs avec Quarto</p>
