--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     </a>
              <!-- Projet 2 -->
     <a href="https://github.com/YATABARE-Cheikna-Amala/projet_machine_learning_student_performance" target="_blank" rel="noopener noreferrer">
-        <img src="Quarto.jpeg" alt="Projet 1" class="project-image">
+        <img src="student.jpeg" alt="Projet 1" class="project-image">
         <div class="project-info">
             <h3>Machine Learning/h3>
             <p>Projet de Machine Learning Sur la prédiction des performances des étudiants</p>
