--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
     </section>
 
     <footer id="contact">
-        <h2>Contact</h2>
-        <p>Email : contact@example.com</p>
+        <h2>Contact: 00221 77 257 29 64</h2>
+        <p>Email : yatabarecheikamala@gmail.com</p>
         <div class="social-links">
             <a href="#"><i class="fab fa-github"></i></a>
             <a href="#"><i class="fab fa-linkedin"></i></a>
