--- a/index.html
+++ b/index.html
@@ -232,9 +232,12 @@
     <section class="skills" id="skills">
         <h2>Mes Compétences</h2>
         <div class="skills-container">
+            <div class="skill-item">R</div>
+            <div class="skill-item">Python</div>
             <div class="skill-item">HTML</div>
             <div class="skill-item">CSS</div>
-            <div class="skill-item">JavaScript</div>
+            <div class="skill-item">Stata</div>
+            <div class="skill-item">SQL</div>
             <!-- Ajouter plus de compétences -->
         </div>
     </section>
@@ -243,8 +246,8 @@
         <h2>Contact: 00221 77 257 29 64</h2>
         <p>Email : yatabarecheikamala@gmail.com</p>
         <div class="social-links">
-            <a href="#"><i class="fab fa-github"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/YATABARE-Cheikna-Amala"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/cheikna-amala-yatabare-2b70a524b/"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
         </div>
     </footer>
