--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <div class="hero-content">
             <h1>YATABARE Cheikna Amala</h1>
             <p>Data Scientist</p>
-            <img src="profil.jpg" alt="Photo de profil" style="width: 200px; border-radius: 50%; margin: 1rem auto;">
+            <img src="Cheikna Amala YATABARE.png" alt="Photo de profil" style="width: 200px; border-radius: 50%; margin: 1rem auto;">
         </div>
     </section>
 
