--- a/index.html
+++ b/index.html
@@ -214,17 +214,28 @@
             </div>
         </div>
     </a>
-             <!-- Projet 2 -->
+    <!-- Projet 2 -->
     <a href="https://github.com/YATABARE-Cheikna-Amala/projet_machine_learning_student_performance" target="_blank" rel="noopener noreferrer">
         <img src="student.jpeg" alt="Projet 1" class="project-image">
         <div class="project-info">
-            <h3>Machine Learning/h3>
-            <p>Projet de Machine Learning Sur la prédiction des performances des étudiants</p>
+            <h3>Machine Learning</h3>
+            <p>Projet de Machine Learning sur la prédiction des performances des étudiants</p>
             <div class="github-link">
                 <i class="fab fa-github"></i> Voir sur GitHub
             </div>
         </div>
     </a>
+          <!-- Projet 3 -->
+    <a href="https://github.com/YATABARE-Cheikna-Amala/Travaux-Pratique-de-R-Mr-HEMA" target="_blank" rel="noopener noreferrer">
+        <img src="télécharger.jpeg" alt="Projet 1" class="project-image">
+        <div class="project-info">
+            <h3>Projet pratiques sur R</h3>
+            <p>Réalisé dans le cadre de mes cours à L'ENSAE à Dakar</p>
+            <div class="github-link">
+                <i class="fab fa-github"></i> Voir sur GitHub
+            </div>
+        </div>
+    </a>  
             <!-- Ajouter plus de projets ici -->
     </section>
 
