--- a/index.html
+++ b/index.html
@@ -172,6 +172,17 @@
                 margin: 0.5rem 0;
             }
 
+            .hero-content {
+                    .hero-content {
+                background-image: url('Votre texte de paragraphe.png'); /* Chemin de l'image */
+                background-size: cover; /* Ajuste l'image pour couvrir toute la section */
+                background-position: center; /* Centre l'image */
+                background-repeat: no-repeat; /* Empêche la répétition de l'image */
+                color: white; /* Couleur du texte pour un bon contraste */
+                padding: 100px 20px; /* Espacement interne pour le contenu */
+                text-align: center; /* Alignement du texte au centre */
+            }
+
             .hero-content h1 {
                 font-size: 2.5rem;
             }
@@ -196,7 +207,6 @@
         <div class="hero-content">
             <h1>YATABARE Cheikna Amala</h1>
             <p>Data Scientist</p>
-            <img src="Votre texte de paragraphe.png" alt="Photo de profil" style="width: 200px; border-radius: 50%; margin: 1rem auto;">
         </div>
     </section>
 
