--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             align-items: center;
             justify-content: center;
             text-align: center;
-            padding: 2rem;
-            background: linear-gradient(45deg, var(--primary-color), var(--secondary-color));
+            /*padding: 2rem;*/
+            background: url("Votre texte de paragraphe.png");
             color: white;
         }
 
