--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             justify-content: center;
             text-align: center;
             /*padding: 2rem;*/
-            background: url("Votre texte de paragraphe.png");
+            background: url(Votre texte de paragraphe.png);
             color: white;
         }
 
